--- a/index.html
+++ b/index.html
@@ -139,7 +139,6 @@ canvas { width: 100%; height: 100%; background: #000; }
     <div class="hud-sub">
         <div class="stat">γ: <span id="gamma-factor-precise">-.--------</span></div>
         <div class="stat">STATUS: <span id="reality-status-main">INTEGRITY_OK</span></div>
-    </div>
     <button id="start-btn-final" onclick="initCore()">🚀 INITIALISER LA SINGULARITÉ</button>
 </header>    
     <main class="dashboard-container">     
@@ -208,7 +207,7 @@ canvas { width: 100%; height: 100%; background: #000; }
                             <option value="MARS">Mars</option>
                             <option value="ROTATING">Station Spatiale</option>
                         </select>
-                        <div class="data-point"><span>Gravité de Base</span><span id="gravity-base">9.8067 m/s²</span></div>
+                        <div class="data-point"><span>Gravité de Base</span><span id="gravity-base">-.----- m/s²</span></div>
                     </div>
                     <div class="control-input-full">
                         <label for="rotation-radius">Rayon de Rotation (m) [Station]</label>
@@ -233,9 +232,6 @@ canvas { width: 100%; height: 100%; background: #000; }
         <div class="data-point"><span>Biais Accéléromètre</span><span id="bias-acc-val" class="warning-text">-.------</span></div>
         <div class="data-point"><span>Dérive Gyroscope</span><span id="bias-gyro-val" class="warning-text">-.------</span></div>
         <div class="data-point"><span>Confiance Matrice P</span><span id="kalman-p-certainty">---.-- %</span></div>
-    </div>
-    <div class="spirit-level-container">
-        <div id="bubble-main" class="spirit-level-bubble"></div>
     </div>
 </section>       
             <section class="panel" aria-labelledby="env-sensors-heading">
@@ -283,7 +279,7 @@ canvas { width: 100%; height: 100%; background: #000; }
                 <div class="data-point"><span>% Vitesse Lumière (c)</span><span id="pct-speed-of-light">-.-- %</span></div>
                 <div class="data-point"><span>Facteur de Lorentz (Extrême)</span><span id="lorentz-factor">--</span></div>
                 <div class="data-point"><span>Friction du Vide</span><span id="quantum-drag">--</span></div>
-                <div class="data-point"><span>Densité de Trame</span><span id="planck-density">--</span></div>
+                <div class="data-point"><span>Densité de Trame</span><span id="planck-overview">--</span></div>
                 <div class="data-point"><span>Dilatation du Temps</span><span id="time-dilation-vitesse">-.-- ns/j</span></div>
                 <div class="data-point"><span>Dilatation Temps</span> <span id="time-dilation">-.-- ns/s</span></div>    
                 <div class="data-point"><span>Temps Dilation (Gravité)</span><span id="time-dilation-gravite">-.-- ns/j</span></div>
@@ -517,7 +513,7 @@ canvas { width: 100%; height: 100%; background: #000; }
         </div>
     </div>
     </section>
-</main>
+    <main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.8.0/math.js"></script>
 <script src="vendor/three.min.js"></script>
 <script src="vendor/turf.min.js"></script>
@@ -527,6 +523,6 @@ canvas { width: 100%; height: 100%; background: #000; }
 <script src="lib/astro.js"></script>    
     
 <script src="gnss-dashboard-full.js"></script>
-                    
+</main>                   
 </body>
 </html>
