--- a/index.html
+++ b/index.html
@@ -127,20 +127,37 @@ canvas { width: 100%; height: 100%; background: #000; }
  
 <body class="dark-mode">
 <div id="poi-alert" style="display:none;">⚠️ POINT D'INTÉRÊT ENREGISTRÉ</div>  
+<he. 2 ader id="master-hud-fixed">
 <header id="master-hud-fixed">
-    <div class="hud-top">
-        <div id="ai-mode" class="badge">STASE</div>
-        <div id="world-reference-badge" class="badge-sci">CORPUS: <span id="current-world-id">EARTH (WGS84)</span></div>
-    </div>
     <div class="hud-main">
         <div id="main-speed" class="tabular">-.-----</div>
         <div class="unit">KM/H</div>
     </div>
     <div class="hud-sub">
-        <div class="stat">γ: <span id="gamma-factor-precise">-.--------</span></div>
-        <div class="stat">STATUS: <span id="reality-status-main">INTEGRITY_OK</span></div>
-    <button id="start-btn-final" onclick="initCore()">🚀 INITIALISER LA SINGULARITÉ</button>
-</header>    
+        <div class="stat">γ: <span id="gamma-factor-precise">-.----------</span></div>
+        <div id="reality-status-main">INTEGRITY_OK</div>
+    </div>
+    <button id="start-btn-final" onclick="startAdventure()">🚀 INITIALISER</button>
+</header>
+    <main>
+    <div id="col-1" class="column active">
+        </div>
+
+    <div id="col-2" class="column">
+        </div>
+
+    <div id="col-3" class="column">
+        </div>
+
+    <div id="col-4" class="column">
+        </div>
+    </main>
+    <div class="mobile-nav">
+    <div class="nav-item active" onclick="switchTab(1)">NAV</div>
+    <div class="nav-item" onclick="switchTab(2)">PHYS</div>
+    <div class="nav-item" onclick="switchTab(3)">MAP</div>
+    <div class="nav-item" onclick="switchTab(4)">LOGS</div>
+    </div>
     <main class="dashboard-container">     
         <div class="column">
             <section class="panel" aria-labelledby="controls-heading">
@@ -513,7 +530,31 @@ canvas { width: 100%; height: 100%; background: #000; }
         </div>
     </div>
     </section>
-    <main>
+    <script>
+function switchTab(idx) {
+    // 1. On cache toutes les colonnes
+    document.querySelectorAll('.column').forEach(c => c.classList.remove('active'));
+    // 2. On éteint tous les boutons du bas
+    document.querySelectorAll('.nav-item').forEach(n => n.classList.remove('active'));
+    
+    // 3. On affiche la colonne demandée
+    document.getElementById('col-' + idx).classList.add('active');
+    // 4. On allume le bouton cliqué
+    document.querySelectorAll('.nav-item')[idx-1].classList.add('active');
+}
+
+// Fonction Anti-Veille liée au bouton START
+async function startAdventure() {
+    if ('wakeLock' in navigator) {
+        try {
+            const wakeLock = await navigator.wakeLock.request('screen');
+            console.log("Écran verrouillé pour l'aventure");
+        } catch (err) { console.log("Erreur WakeLock"); }
+    }
+    // Lancez vos calculs ici
+    if(typeof initCore === "function") initCore();
+}
+    </script>         
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.8.0/math.js"></script>
 <script src="vendor/three.min.js"></script>
 <script src="vendor/turf.min.js"></script>
@@ -522,7 +563,6 @@ canvas { width: 100%; height: 100%; background: #000; }
 <script src="lib/ephem.js"></script>
 <script src="lib/astro.js"></script>    
     
-<script src="gnss-dashboard-full.js"></script>
-</main>                   
+<script src="gnss-dashboard-full.js"></script>                  
 </body>
 </html>
