--- a/index.html
+++ b/index.html
@@ -69,37 +69,35 @@ main {
 }
 
 /* --- NAVIGATION MOBILE (Cachée sur PC) --- */
-.mobile-nav { display: none; }
-
-@media (max-width: 1024px) {
+.mobile-nav { dis@media (max-width: 1024px) {
     body { overflow: hidden; position: fixed; width: 100%; }
     
     main {
         display: grid !important; 
-        grid-template-columns: 1fr 1fr; /* 2 colonnes */
-        grid-template-rows: 1fr 1fr;    /* 2 lignes */
+        grid-template-columns: 1fr 1fr; 
+        grid-template-rows: 1fr 1fr;
         gap: 4px;
         padding: 85px 4px 4px 4px !important;
         height: 100vh;
+        box-sizing: border-box;
     }
 
+    /* Force chaque colonne à rester dans son quart d'écran */
     .column {
-        display: flex !important; /* On affiche TOUT simultanément */
+        display: flex !important;
         flex-direction: column;
         height: 100%;
+        min-height: 0; /* Important pour le scroll interne */
         overflow: hidden; 
-        background: var(--card);
-        border: 1px solid var(--border);
-        border-radius: 4px;
     }
 
-    .panel { padding: 4px; margin-bottom: 2px; flex: 1; }
-    h2 { font-size: 0.6rem; margin: 1px 0; }
-    .data-point { font-size: 0.55rem; padding: 2px 0; }
-    .spirit-level-container { height: 40px; } /* Compression du niveau à bulle */
-    canvas { height: 60px !important; } /* Compression des graphiques */
+    .panel { 
+        padding: 4px; 
+        flex: 1; 
+        min-height: 0; 
+        overflow-y: auto; /* Permet de voir tout le contenu d'un panel si trop long */
     }
-
+}
     .mobile-nav {
         display: flex;
         position: fixed;
@@ -298,7 +296,7 @@ canvas { width: 100%; height: 100%; background: #000; }
                 <div class="data-point"><span>% Vitesse Lumière (c)</span><span id="pct-speed-of-light">-.-- %</span></div>
                 <div class="data-point"><span>Facteur de Lorentz (Extrême)</span><span id="lorentz-factor">--</span></div>
                 <div class="data-point"><span>Friction du Vide</span><span id="quantum-drag">--</span></div>
-                <div class="data-point"><span>Densité Planck</span><span id="planck-density">--</span></div>
+                <div class="data-point"><span>Densité Planck</span><span id="planck-constanty">--</span></div>
                 <div class="data-point"><span>Constante Planck</span><span id="planck-const">6.626e-34</span></div>
                 <div class="data-point"><span>Dilatation du Temps</span><span id="time-dilation-vitesse">-.-- ns/j</span></div>
                 <div class="data-point"><span>Dilatation Temps</span> <span id="time-dilation">-.-- ns/s</span></div>    
