--- a/index.html
+++ b/index.html
@@ -152,14 +152,6 @@ canvas { width: 100%; height: 100%; background: #000; }
 </header>
     <main>
     <div id="col-1" class="column">
-        <section class="panel">
-            <h2><i class="fas fa-satellite"></i> MOTEUR EKF 21</h2>
-            <div class="data-grid">
-                <div class="data-point"><span>Acc. Filtrée</span><span id="f-acc-xyz">--</span></div>
-                <div class="data-point"><span>Biais Acc.</span><span id="bias-acc-val">--</span></div>
-    </div>
-    <main class="dashboard-container">     
-        <div class="column">
             <section class="panel" aria-labelledby="controls-heading">
                 <h2 id="controls-heading"><i class="fas fa-cog"></i> Contrôles & Système</h2>
                 <div class="data-point"><span>Date & Heure (UTC/GMT)</span><span id="utc-datetime">--</span></div>
@@ -531,6 +523,7 @@ canvas { width: 100%; height: 100%; background: #000; }
         </div>
     </div>
     </section>
+    </main>        
 <script>
 let wakeLock = null;
 
