--- a/index.html
+++ b/index.html
@@ -147,7 +147,6 @@ canvas { width: 100%; height: 100%; background: #000; }
     <div class="hud-sub">
         <div class="stat">γ: <span id="gamma-factor-precise">-.----------</span></div>
         <div id="reality-status-main">INTEGRITY_OK</div>
-    </div>
     <button id="start-btn-final" onclick="startAdventure()">🚀 INITIALISER</button>
 </header>
     <main>
@@ -281,6 +280,7 @@ canvas { width: 100%; height: 100%; background: #000; }
                 <div>Accélération Y: <span class="val" id="acc-y">-.---</span></div>
                 </div>    
                 <hr>
+                <div id="col-2" class="column">
                 <h3>Physique & Relativité</h3>
                 <div class="data-point"><span>Vitesse du Son Locale </span><span id="vitesse-son-cor">--</span></div>
                 <div class="data-point"><span>% de la Vitesse du Son</span><span id="perc-speed-sound">-.-- %</span></div>
@@ -318,7 +318,7 @@ canvas { width: 100%; height: 100%; background: #000; }
                 <div class="data-point"><span>Visibilité Cible</span><span id="horizon-target-visibility">--</span></div>
                 <div class="data-point"><span>Promenade Microscopique</span><span id="total-path-inf">--</span></div>
             </section>
-
+            <div id="col-3" class="column">
             <section class="panel" aria-labelledby="map-heading">
                 <h2 id="map-heading"><i class="fas fa-map-marked-alt"></i> Carte GNSS / Globe Interactif</h2>
                 <div class="data-point"><span>Précision GPS (Acc)</span><span id="gps-accuracy-display">--</span></div> <div id="map-container">
@@ -476,6 +476,7 @@ canvas { width: 100%; height: 100%; background: #000; }
                 <div class="data-point"><span>Coord. Z (Géocentrique)</span><span id="coord-z">--</span></div>
                 <div class="data-point"><span>Distance 3D Cumulée</span><span id="dist-3d">-.--- m</span></div>
                 <hr>
+                <div id="col-4" class="column">
                 <div class="astro-visual-container">
     <canvas id="mc-clock-canvas" width="120" height="120"></canvas>
                 </div>
