--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ canvas { width: 100%; flex: 1; background: #080808; border-radius: 3px; margin-t
                 <div class="data-point"><span>PM 10 (µg/m³)</span><span id="pm10-val">--</span></div>
                 <div class="data-point"><span>O₃ (µg/m³)</span><span id="o3-val">--</span></div>
             </section>
-
+            <div class="column">
             <section class="panel" aria-labelledby="dynamics-heading">
                  <h2 id="dynamics-heading"><i class="fas fa-balance-scale-right"></i> Dynamique & Forces</h2>
                 <div class="data-point"><span>Gravité Locale (g)</span><span id="local-gravity">--</span></div>                 
